# AzureML

./: .gitignore  README.md  pyproject.toml
.github/workflows/: azureml-job.yml
helloworld/: __init__.py  run-hello.py  run.py
